# UrbexFinder

./: .env-example  .gitignore  28.23687,57.75445,28.4813,57.86563_bbox.kml  43.16013,53.13316,46.2715,54.0216_bbox.kml  README.md  docker-compose.yml
bot/: Dockerfile  README.md  alembic.ini  get_places.py  main.py  pyproject.toml
bot/alembic/: env.py
bot/alembic/versions/: 20260216_0001_initial_schema.py  20260217_0002_place_ratings.py  20260217_0003_social_reviews_photos.py  20260217_0004_restore_users_role_fk.py  20260217_0005_place_nonexistent_reports.py  42c59f385923_numeric_fix.py  43e0006c05eb_описание.py  6b7a607ff7b0_change_lat_lon_to_numeric.py
bot/application/: event_subscribers.py  place_social_service.py  places_view.py  send_resources_page.py
bot/application/startup/: make_migrations.py  on_startup_places.py
bot/domain/: decimal6.py  models.py
bot/geo_data/: lat_lon_full_address.csv  Покинутые_индустриальные_объекты.kmz
bot/infrastructure/core/: error_handler.py  event_bus.py  logger_config.py  send_to_loki.py  settings.py
bot/infrastructure/db/: EasticSearch.py  PgDb.py
bot/infrastructure/repository/: __init__.py  places.py  resources.py  roles.py  users.py
bot/infrastructure/services/: async_formation_of_coordinates.py  clean_html.py  is_role.py  kmz_reader.py  pagination.py  pagination_new.py  places_deduplicator.py  reverse_geocode.py  template_renderer.py
bot/interface/handlers/: help.py  places.py  places_social.py  resources.py  start.py
bot/interface/middleware/: db_middleware.py  elastic_middleware.py  event_bus_middleware.py  (+1 more)
(+18 files in other folders)
