[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Палкин Константин",email = "dima6225@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "elasticsearch (>=9.2.1,<10.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
]
[tool.poetry.dependencies]
python = ">=3.10,<3.15"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
